add fonts, correction and adapt block about

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,26 +1,23 @@
 <section class="about">
   <div class="container">
     <div class="about-inner">
-
-      <div class="about-text">
-        <h1>Комфорт починається з меблів.</h1>
-
+      <div class="about-content">
+        <h2 class="about-title">Комфорт починається з меблів.</h2>
         <p>
-          Меблі — це не просто предмети інтер’єру. Вони створюють атмосферу дому,
-          формують настрій і визначають стиль життя.
+          Меблі — це не просто предмети інтер’єру. 
+          Вони створюють атмосферу дому, формують настрій і визначають стиль життя. Зручне крісло, міцний стіл чи м’який диван можуть стати улюбленим місцем для відпочинку або натхнення.
         </p>
 
-        <p>
-          Сучасні меблі поєднують естетику, функціональність і якість матеріалів.
-        </p>
+        <span>
+         Сучасні меблі поєднують естетику, функціональність і якість матеріалів. Вони підкреслюють індивідуальність простору та допомагають зробити його по-справжньому затишним.
+        </span>
 
-        <button>Каталог</button>
+      <a href="#" class="about-btn">Каталог</a>
       </div>
-
+      
       <div class="about-image">
         <img src="img/about-img.png" alt="Меблі в інтер’єрі">
       </div>
-
     </div>
   </div>
 </section>
