--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -1,13 +1,26 @@
-<header class="header">
-    <div class="container">
-      <div class="logo">Le Home</div>
-
-      <nav class="nav">
+<section class="banner">
+  <div class="container">
+  <header class="banner-header">
+      <div class="logo">
+        <img src="../img/logo.png" alt="Le Home Logo">
+        </div>
+      <nav class="nav-links">
         <a href="#">Про нас</a>
         <a href="#">Корпусні меблі</a>
         <a href="#">Каталог</a>
         <a href="#">Послуги</a>
         <a href="#">Контакти</a>
       </nav>
-    </div>
   </header>
+
+  <!-- Центральная картинка -->
+  <img src="../img/logo-name.png" alt="Central" class="banner-center-image">
+
+  <!-- Стрелка вниз -->
+  <a href="#about" class="banner-arrow">
+    <img src="../img/icons_arrow-down.png" alt="arrow down">
+  </a>
+</div>
+</section>
+
+ 
