create new pages html, new block collections, adapt to mobile version

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,10 +12,11 @@
 
     <main>
         @@include('../pages/about.html')
-        @@include('../pages/collection-furniture.html')
-        @@include('../pages/catalog-furniture.html')
+        @@include('../pages/collections.html')
+        @@include('../pages/catalog.html')
         @@include('../pages/services.html')
         @@include('../pages/contacts.html')
+    
     </main>
 
     @@include('../pages/footer.html')
