adaptation banner to mobile version

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -4,6 +4,7 @@
       <div class="logo">
         <img src="../img/logo.png" alt="Le Home Logo">
         </div>
+      <div class="header-right">
       <nav class="nav-links">
         <a href="#">Про нас</a>
         <a href="#">Корпусні меблі</a>
@@ -11,7 +12,34 @@
         <a href="#">Послуги</a>
         <a href="#">Контакти</a>
       </nav>
-  </header>
+
+        <div class="languages">
+          <a href="#">UA</a>
+          <span>/</span>
+          <a href="#">EN</a>
+        </div>
+
+        <div class="favorites">
+          <img src="../img/heart.png" alt="Heart Icon">
+        </div>
+        </div>
+
+        <div class="burger" id="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
+    </header>
+
+    <!-- Мобильное меню -->
+    <div class="mobile-menu" id="mobileMenu">
+      <a href="#">Про нас</a>
+      <a href="#">Корпусні меблі</a>
+      <a href="#">Каталог</a>
+      <a href="#">Послуги</a>
+      <a href="#">Контакти</a>
+    </div>
 
   <img src="../img/logo-name.png" alt="Central" class="banner-center-image">
 
