create and adaptation block contacts

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -10,7 +10,7 @@
         <a href="#collections">Корпусні меблі</a>
         <a href="#">Каталог</a>
         <a href="#services">Послуги</a>
-        <a href="#">Контакти</a>
+        <a href="#contacts">Контакти</a>
       </nav>
 
         <div class="languages">
