create and adaptation footer and correction other blocks

--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -1,4 +1,4 @@
-<section class="catalog py-5">
+<section class="catalog py-5" id="catalog">
   <div class="container">
 
     <ul class="nav nav-tabs justify-content-center mb-4" id="catalogTabs" role="tablist">
