--- a/src/pages/collections.html
+++ b/src/pages/collections.html
@@ -1,27 +1,27 @@
 <section class="collection" id="collections">
-<div class="container">
-<div class="collections-grid">
+  <div class="container">
+    <div class="collections-grid">
 
-  <a href="kitchens.html" class="collection item-1">
-    <img src="../img/collection1.png" alt="Kitchen Collection">
-    <span>Кухні</span>
-  </a>
+      <a href="kitchens.html" class="collection-card">
+        <img src="../img/collection1.png" alt="Kitchen Collection">
+        <span>Кухні</span>
+      </a>
 
-  <a href="wardrobes.html" class="collection item-2">
-    <img src="../img/collection2.png" alt="Wardrobe Collection">
-    <span>Гардероби</span>
-  </a>
+      <a href="wardrobes.html" class="collection-card">
+        <img src="../img/collection2.png" alt="Wardrobe Collection">
+        <span>Гардероби</span>
+      </a>
 
-  <a href="livings.html" class="collection item-3">
-    <img src="../img/collection3.png" alt="Living Room Collection">
-    <span>Вітальні</span>
-  </a>
+      <a href="livings.html" class="collection-card">
+        <img src="../img/collection3.png" alt="Living Room Collection">
+        <span>Вітальні</span>
+      </a>
 
-  <a href="bedrooms.html" class="collection item-4">
-    <img src="../img/collection4.png" alt="Bedroom Collection">
-    <span>Спальні</span>
-  </a>
+      <a href="bedrooms.html" class="collection-card">
+        <img src="../img/collection4.png" alt="Bedroom Collection">
+        <span>Спальні</span>
+      </a>
 
-</div>
-</div>
+    </div>
+  </div>
 </section>
