--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -8,7 +8,7 @@
       <nav class="nav-links">
         <a href="#">Про нас</a>
         <a href="#collections">Корпусні меблі</a>
-        <a href="#">Каталог</a>
+        <a href="#catalog">Каталог</a>
         <a href="#services">Послуги</a>
         <a href="#contacts">Контакти</a>
       </nav>
