create a list and a list page

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -19,9 +19,10 @@
           <a href="#">EN</a>
         </div>
 
-        <div class="favorites">
-          <img src="../img/heart.png" alt="Heart Icon">
-        </div>
+        <a href="favorites.html" class="favorites">
+          <img src="../img/heart.png" alt="Heart Icon" id="header-heart">
+            <span id="fav-count">0</span>
+            </a>
         </div>
 
         <div class="burger" id="burger">
